--- a/FAQ.html
+++ b/FAQ.html
@@ -1,13 +1,94 @@
-<!DOCTYPE<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
-
+        <title>FAQ</title>
     </head>
 <body>
 <h1>Frequently Asked Questions</h1>
 <div>
     <h2>What are your Hours of Operation?</h2>
-    
+    <ul>
+        <li>East Aurora dine-in is open monday - sunday from 11:30 am til 10:00 pm (last seatings at 8:45 pm)</li>
+        <li>East Aurora curbside takeout is open Monday - Sunday from 11:30 am til 9:00 pm</li>
+        <li>Clarence dine-in is open Monday - Saturday from 11:30 am til 10:00 pm (last seatings at 8:30 pm) & sundays from 11:30 am til 8:00 pm</li>
+        <li>Clarence curbside takeout is open Sunday - Thursday from 11:30 am til 7:30 pm</li>
+        <li>Please Note: for online orders once the kitchen cook time exceeds the kitchen close time the online ordering form automatically shuts off, sometimes making customers unable to place an online order during our normal open hours. This only happens when our kitchen has hit our capacity for the night- we apologize for any inconvenience.</li>  
+      </ul>
+    </ul>
+</br>
+    <h2>What safety measures are you taking for dining at your restaurant?</h2>
+    <ul>
+        <li>Personal Protective Equipment
+        </br>-all staff must wear a mask
+        </br>-all guests must wear a mask unless seated at the table</li>
+        <li>Social Distancing
+        </br>-operating at half capacity with extra space between tables
+        </br>-booking by reservation only to enforce limited diners
+        </br>-distancing maintained in common areas
+        </br>-diners wait in their cars until their tables are ready </li>
+        <li>Cleaning & Sanitizing
+        </br>-surfaces sanitized after every meal
+        </br>-QR codes provided at tables to minimize paper menus
+        </br>-common areas deep cleaned daily</li>
+    </ul>
+    <img src="https://popmenucloud.com/cdn-cgi/image/width=768,height=768,fit=scale-down,format=auto,quality=60/laworbdj/1f05d53f-5261-4d37-a345-54ec307ad985.jpg"/>
+</br>
+    <h2>I need to make a change to my reservation- what do I do?</h2>
+    <ul>
+        <li>If you are unable to make a change to your reservation through your opentable account please give us a call, leave us a message & someone will get back to you as soon as we can.</li>
+    </ul>
+    <h2>How do i place a takeout order?</h2>
+    <ul>
+        <li>For East Aurora: place your order online through our website or by calling (716) 652-7959</br>For Clarence: place your order online through our website (*no phone orders at this location*)</li>
+        <li>For online orders it is important to check the 'estimated ready time' at the top of the order page prior to hitting submit.</li>
+        <li>Our system cannot accept preorders for a later time, only those placed in real time. We also cannot take preorders over the phone.</li>
+        <li>Please note that weekends are usually busy often with longer wait times.</li>
+        <li>A cell phone number will be needed at checkout so that we can text you when your order is ready. Please do not input a landline number with your order.</li>
+    </ul>
+    <img src="https://popmenucloud.com/cdn-cgi/image/width=768,height=768,fit=scale-down,format=auto,quality=60/laworbdj/5a120b00-9b62-42e0-bfc4-b95f52047547.jpg"/>
+</br>
+    <h2>Can I schedule an order for a later time?</h2>
+    <ul>
+        <li>So sorry, but our online system is unable to accept pre-orders (same goes for our phone orders). We can only accept takeout orders in real time as they are placed.</li>
+    </ul>
+    <img src="https://popmenucloud.com/cdn-cgi/image/width=768,height=768,fit=scale-down,format=auto,quality=60/laworbdj/15a1bbc4-9090-4bd6-8e4a-c463f94635f8.png"/>
+</br>
+    <h2>My giftcard isn't working online - how do i fix this?</h2>
+    <ul>
+        <li>We've recently switched over our online operating system at all of our locations. If you purchased or received a red giftcard (pictured below) from one of our locations please input your card info into the link below to get a new number that is compatible with our online system.</li>
+        <li>If you have any further gift card issues please send us a message through our 'contact us' form or send us a private message on facebook or instagram and someone will get back to you shortly!</li>
+    </ul>
+    <a href="https://www.toasttab.com/bar-bill/findcard" target="_blank">www.toasttab.com/bar-bill/findcard</a> </br>
+    <img src="https://popmenucloud.com/cdn-cgi/image/width=768,height=768,fit=scale-down,format=auto,quality=60/laworbdj/da7a6576-6d1f-4f7e-ae5e-b9d10ac413ef.JPG"/>
+</br>    
+    <h2>I'm trying to place an order during your open hours, but it says online ordering is currently not available. Why can't i place an order?</h2>
+    <ul>
+        <li>Once the kitchen cook time exceeds the kitchen close time the online ordering form automatically shuts off, sometimes making customers unable to place an online order during our normal open hours. This only happens when our kitchen has hit our capacity for the night- we apologize for any inconvenience.</li>
+    </ul>
+    <img src="https://popmenucloud.com/cdn-cgi/image/width=768,height=768,fit=scale-down,format=auto,quality=60/laworbdj/a49ce4fd-18ae-4a4d-96cb-ea2748b4a577.png"/>
+</br>
+    <h2>What happens once i've submitted my order?</h2>
+    <ul>
+        <li>You will be given an estimated time of when your food will be ready. When you arrive, please stay in your vehicle until you receive a text from us letting you know that your order is done. At that time pull up to the takeout cones & someone will bring your food out to you.</li>
+    </ul>
+    <img src="https://popmenucloud.com/cdn-cgi/image/width=768,height=768,fit=scale-down,format=auto,quality=60/laworbdj/9db7e650-54d6-44a5-b3f6-070ccfb92adf.jpeg"/>
+</br>
+    <h2>I have an issue - how can I talk to someone on the phone?</h2>
+    <ul>
+        <li>You can call us and leave a voicemail at either location. We are doing our very best to get back to those that have left us a message within 30 minutes (during our open hours). If a message is left after hours we will be in touch the following day. We appreciate your patience!</li>
+    </ul>
+</br>
+    <h2>How far in advance can i place a reservation for a table at Bar-Bill Tavern or Bar-Bill North?</h2>
+    <ul>
+        <li>Guests are able to place a reservation up to 14 days in advance through our website!</li>
+    </ul>
+</br>
+    <h2>How can I be updated on announcements, changes or news from Bar-Bill?</h2>
+    <ul>
+        <li>Make sure you are following us on facebook, instagram & twitter for updates on Bar-Bill Tavern & Bar-Bill North!</li>
+    </ul>
+</br>
+<h2>Thank you for your continued patronage & support during this time!</h2>
 </div>
 </body>
 </html>
