--- a/home.html
+++ b/home.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-
+    <title>BAR-BILL TAVERN - Bar-Bill Tavern - Restaurant in NY</title>
+    <link rel="stylesheet" href="barbill.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
 </head>
-<body>
 
+<body>
+    <header>
+        <img src="images/bbwhite_logo.png" id="logo" alt="bar bill logo" width="10%">
+        <h1>bar-bill tavern: East Aurora and Clarence, NY</h1><br />
+        <nav>
+            <a href="home.html" class="navlink">Home</a>
+            <a href="menu.html" class="navlink">Menu</a>
+            <a href="takeout.html" class="navlink">Take Out</a>
+            <a href="aboutus.html" class="navlink">About Us</a>
+            <a href="faq.html" class="navlink">FAQ</a>
+            <a href="contact.html" class="navlink">Contact Us</a>
+        </nav>
+    </header>
+    <div name="home_page_photo">
+        <img src="images/barbilltavern.jpg" id="homephoto" alt="bar bill tavern" width="80%">
+    </div>
 </body>
+
 </html>
