--- a/home.html
+++ b/home.html
@@ -23,6 +23,58 @@
     <div name="home_page_photo">
         <img src="images/barbilltavern.jpg" id="homephoto" alt="bar bill tavern" width="80%">
     </div>
+    <div class="reservation">
+        <h2>Dining Reservations</h2>
+        <h3>We are open for dining at both Bar-Bill locations! Reservations are strongly encouraged as we are operating
+            at 50% capacity. Book your table through our website now!</h3>
+        <div class="location">
+            <img src="images/Loc_EastAurora.jpg" alt="east aurora">
+            <img src="images/Loc_Clarence.jpg" alt="clarence">
+            <p><b>EAST AURORA RESERVATIONS</b><br />
+                Open Monday - Sunday 11:30 am til 10:00 pm (Last Seating at 8:45 pm)<br />
+                -ONLINE RESERVATIONS ONLY-
+            </p>
+            <p><b>CLARENCE RESERVATIONS</b><br />
+                Open Monday - Saturday 11:30 am til 10:00 pm (Last Seating at 8:30 pm)<br />
+                Sunday 11:30 am - 8:00 pm<br />
+                -ONLINE RESERVATIONS ONLY-
+            </p>
+        </div>
+    </div>
+    <div class="reservation">
+        <h2>Curbside Takeout</h2>
+        <div class="location">
+            <img src="images/to_eastaurora.jpg" alt="east aurora take out">
+            <img src="images/to_clarence.jpg" alt="clarence take out">
+            <p><b>EAST AURORA TAKEOUT</b><br/>
+                Available Daily 11:30 am til 9:00 pm<br/>
+                Offering online or phone orders. Curbside pickup only.<br/>
+                -WE DO NOT ACCEPT PRE-ORDERS, ONLY ORDERS IN REAL TIME-
+            </p>
+            <p><b>CLARENCE TAKEOUT</b><br/>
+                Available Sunday - Thursday 11:30 am til 7:30 pm<br/>
+                Offering online orders only. Curbside pickup only.<br/>
+                -WE DO NOT ACCEPT PRE-ORDERS, ONLY ORDERS IN REAL TIME-
+            </p>
+        </div>
+    </div>
+        <div class="reservation">
+            <h2>Gift Cards and March</h2>
+            <div class="location">
+                <img src="images/bb_giftcard.jpg" alt="gift card">
+                <img src="images/bb_merch.jpg" alt="merch">
+                <p><b>GIFT CARDS</b><br/>
+                    E-Cards always available or pull up curbside<br/>
+                    to purchase a swipeable giftcrd<br/>
+                    -CARDS ARE REDEEMABLE AT BOTH LOCATIONS AND 189 BURGER-
+                </p>
+                <p><b>PICK UP OR SHIP OUR MERCH</b><br/>
+                    Purchase Bar-Bill Merch to pick up curbside<br/>
+                   through our online ordering<br/>
+                    -OR- Ship  our march antionwide
+                </p>
+            </div>
+    </div>
 </body>
 
 </html>
