revise home aboutus barbillcss new aboutcss

--- a/aboutus.html
+++ b/aboutus.html
@@ -4,6 +4,7 @@
 <head>
     <title>ABOUT US - Bar-Bill Tavern - Restaurant in NY</title>
     <link rel="stylesheet" href="barbill.css">
+    <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
 </head>
 
@@ -17,11 +18,11 @@
             <a href="takeout.html" class="navlink">Take Out</a>
             <a href="aboutus.html" class="navlink">About Us</a>
             <a href="faq.html" class="navlink">FAQ</a>
-            <a href="contact.html" class="navlink">Contact Us</a>
+            <a href="contact.php" class="navlink">Contact Us</a>
         </nav>
     </header>
     <div class="about">
-        <h2>HISTORY: The Original East Aurora Bar-Bill</h2><br/>
+        <h2>HISTORY: The Original East Aurora Bar-Bill</h2>
         <img src="images/About_EA.jpg" alt="eastaurora" width="100%" />
         <p>The Bar Bill Tavern has been an institution in East Aurora, NY since the day it opened its doors. Mystery
             surrounds the lore of "the Bill" at almost every telling. Everything from the name, to the famous customer
@@ -56,11 +57,9 @@
             would love to show you the bar we love: no frills, no pretense, just a place to meet your old friends and
             make some new ones.<br /></p>
     </div>
-
-
-    <div id="about">
-        <img src="images/About_Cl.jpg" alt="clarence" width="100%">
+    <div class="about">
         <h2>HISTORY: The New Bar Bill North</h2>
+        <img src="images/About_Cl.jpg" alt="clarence" width="100%">
         <p>What is now Bar-Bill North was formerly the well-known old Red Mill Inn. The structure was built in 1858 and
             interestingly enough, was never actually a functioning mill. It served as the main house for a 100 acre
             dairy farm until 1962 when it was transformed into a restaurant. In 1967, the business expanded by adding a
@@ -72,15 +71,35 @@
     </div>
     <div class="firsttime">
         <h2>First Timers</h2>
-        <p>WE DO NOT ACCEPT CREDIT CARDS<br>
+        <p>-WE DO NOT ACCEPT CREDIT CARDS-<br>
             So coming with cash always makes for an easier transaction. We have an ATM located in the bar if you forget,
             so you;re never totally stuck.<br />
-            WHEN YOU ORDER<br />
+            -WHEN YOU ORDER-<br />
             Make sure you get at least one order of wings to share. You will not be disappointed, they are wrld famous!
             We only serve beef until 10pm, so get there early! The thing to remember above all else is you will always
-            have fun with the right attitude. First timers should prepare themselves to have a new fvorite place!
-        </p>
+            have fun with the right attitude. First timers should prepare themselves to have a new favorite place!
+        </p><br />
     </div>
+    <footer>
+        <div class="footer">
+            <h2>Our Locations</h2>
+            <p><em>East Aurora Takeout</em><br />
+                191 Main Street, Rear<br />
+                East Aurora, NY 14052<br />
+                (716) 652-7959
+            </p>
+            <p><em>East Aurora</em><br />
+                185 Main Street<br />
+                East Aurora, NY 14052<br />
+                (716) 652-7959
+            </p>
+            <p><em>Clarence</em><br />
+                8326 Main Street<br />
+                Clarence, NY 14221<br />
+                (716) 710-9464
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
