--- a/home.html
+++ b/home.html
@@ -11,14 +11,14 @@
     <header>
         <img src="images/bbwhite_logo.png" id="logo" alt="bar bill logo" width="10%">
         <h1>bar-bill tavern: East Aurora and Clarence, NY</h1><br />
-        
+
         <nav>
             <a href="home.html" class="navlink">Home</a>
             <a href="menu.html" class="navlink">Menu</a>
             <a href="takeout.html" class="navlink">Take Out</a>
             <a href="aboutus.html" class="navlink">About Us</a>
             <a href="faq.html" class="navlink">FAQ</a>
-            <a href="contact.html" class="navlink">Contact Us</a>
+            <a href="contact.php" class="navlink">Contact Us</a>
         </nav>
     </header>
     <div name="home_page_photo">
@@ -47,35 +47,55 @@
         <div class="location">
             <img src="images/to_eastaurora.jpg" alt="east aurora take out">
             <img src="images/to_clarence.jpg" alt="clarence take out">
-            <p><b>EAST AURORA TAKEOUT</b><br/>
-                Available Daily 11:30 am til 9:00 pm<br/>
-                Offering online or phone orders. Curbside pickup only.<br/>
+            <p><b>EAST AURORA TAKEOUT</b><br />
+                Available Daily 11:30 am til 9:00 pm<br />
+                Offering online or phone orders. Curbside pickup only.<br />
                 -WE DO NOT ACCEPT PRE-ORDERS, ONLY ORDERS IN REAL TIME-
             </p>
-            <p><b>CLARENCE TAKEOUT</b><br/>
-                Available Sunday - Thursday 11:30 am til 7:30 pm<br/>
-                Offering online orders only. Curbside pickup only.<br/>
+            <p><b>CLARENCE TAKEOUT</b><br />
+                Available Sunday - Thursday 11:30 am til 7:30 pm<br />
+                Offering online orders only. Curbside pickup only.<br />
                 -WE DO NOT ACCEPT PRE-ORDERS, ONLY ORDERS IN REAL TIME-
             </p>
         </div>
     </div>
-        <div class="reservation">
-            <h2>Gift Cards and March</h2>
-            <div class="location">
-                <img src="images/bb_giftcard.jpg" alt="gift card">
-                <img src="images/bb_merch.jpg" alt="merch">
-                <p><b>GIFT CARDS</b><br/>
-                    E-Cards always available or pull up curbside<br/>
-                    to purchase a swipeable giftcrd<br/>
-                    -CARDS ARE REDEEMABLE AT BOTH LOCATIONS AND 189 BURGER-
-                </p>
-                <p><b>PICK UP OR SHIP OUR MERCH</b><br/>
-                    Purchase Bar-Bill Merch to pick up curbside<br/>
-                   through our online ordering<br/>
-                    -OR- Ship  our march antionwide
-                </p>
-            </div>
+    <div class="reservation">
+        <h2>Gift Cards and March</h2>
+        <div class="location">
+            <img src="images/bb_giftcard.jpg" alt="gift card">
+            <img src="images/bb_merch.jpg" alt="merch">
+            <p><b>GIFT CARDS</b><br />
+                E-Cards always available or pull up curbside<br />
+                to purchase a swipeable giftcrd<br />
+                -CARDS ARE REDEEMABLE AT BOTH LOCATIONS AND 189 BURGER-
+            </p>
+            <p><b>PICK UP OR SHIP OUR MERCH</b><br />
+                Purchase Bar-Bill Merch to pick up curbside<br />
+                through our online ordering<br />
+                -OR- Ship our march antionwide
+            </p>
+        </div>
     </div>
+    <footer>
+        <div class="footer">
+            <h2>Our Locations</h2>
+            <p><em>East Aurora Takeout</em><br />
+                191 Main Street, Rear<br />
+                East Aurora, NY 14052<br />
+                (716) 652-7959
+            </p>
+            <p><em>East Aurora</em><br />
+                185 Main Street<br />
+                East Aurora, NY 14052<br />
+                (716) 652-7959
+            </p>
+            <p><em>Clarence</em><br />
+                8326 Main Street<br />
+                Clarence, NY 14221<br />
+                (716) 710-9464
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
