--- a/FAQ.html
+++ b/FAQ.html
@@ -80,7 +80,6 @@
         <li>If you have any further gift card issues please send us a message through our 'contact us' form or send us a private message on facebook or instagram and someone will get back to you shortly!</li></br>
         <a href="https://www.toasttab.com/bar-bill/findcard" class="button" target="_blank"  >www.toasttab.com/bar-bill/findcard</a> </br>
     </ul>
-    <a href="https://www.toasttab.com/bar-bill/findcard" class="button" target="_blank" padding="20px 40px" margin="20px 20px">www.toasttab.com/bar-bill/findcard</a> </br>
     <div class="FAQimg">
         <img src="https://popmenucloud.com/cdn-cgi/image/width=768,height=768,fit=scale-down,format=auto,quality=60/laworbdj/da7a6576-6d1f-4f7e-ae5e-b9d10ac413ef.JPG"/>
     </div>
@@ -119,5 +118,25 @@
 <h2>Thank you for your continued patronage & support during this time!</h2>
 </div>
 </div>
+<footer>
+    <div class="footer">
+        <h2>Our Locations</h2>
+        <p><em>East Aurora Takeout</em><br />
+            191 Main Street, Rear<br />
+            East Aurora, NY 14052<br />
+            (716) 652-7959
+        </p>
+        <p><em>East Aurora</em><br />
+            185 Main Street<br />
+            East Aurora, NY 14052<br />
+            (716) 652-7959
+        </p>
+        <p><em>Clarence</em><br />
+            8326 Main Street<br />
+            Clarence, NY 14221<br />
+            (716) 710-9464
+        </p>
+    </div>
+</footer>
 </body>
 </html>
