--- a/aboutus.html
+++ b/aboutus.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <img src="images/bbwhite_logo.png" id="logo" alt="bar bill logo" width="10%">
-        <h1>about us: East Aurora and Clarence, NY</h1><br />
+        <h1>BAR-BILL TAVERN: East Aurora and Clarence, NY</h1><br />
         <nav>
             <a href="home.html" class="navlink">Home</a>
             <a href="menu.html" class="navlink">Menu</a>
